apps/mosquitto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
      app: mosquitto
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mosquitto
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.0.20
          ports:
            - name: mosquitto
              containerPort: 1883
          volumeMounts:
            - mountPath: /mosquitto
              name: mosquitto
      volumes:
        - name: mosquitto
          persistentVolumeClaim:
            claimName: mosquitto-pvc
