apps/mosquitto/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  entryPoints:
    - mosquitto
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mosquitto
          port: 1883
